--- a/frontend/app/components/Matchmaking/TimeCounter.css
+++ b/frontend/app/components/Matchmaking/TimeCounter.css
@@ -8,6 +8,7 @@
 
     width: 90px;
     height: 90px;
+    transform: rotate(270deg);
 }
 
 .time-counter-circle {
@@ -16,9 +17,7 @@
    
 }
 
-.time-counter-circle svg {
-    transform: rotate(270deg);
-}
+
 
 .time-counter-circle svg circle {
     width: 100%;
@@ -30,10 +29,10 @@
 }
 
 .time-counter-circle svg circle:nth-child(2) {
-    /* width: 100%;
+    width: 100%;
     height: 100%;
     fill: transparent;
-    stroke-width: 8; */
+    stroke-width: 8;
     stroke:#03c837;
     transform:  translate(5px, 5px);
     
