--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -2,7 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
-/* :root {
+:root {
   --foreground-rgb: 0, 0, 0;
 }
 
@@ -10,7 +10,7 @@
   :root {
     --foreground-rgb: 255, 255, 255;
   }
-} */
+}
 
 body {
   color: rgb(var(--foreground-rgb));
